--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,57 @@
+asttokens==2.0.5
+backcall==0.2.0
+beautifulsoup4==4.11.1
+certifi==2022.5.18.1
+charset-normalizer==2.0.12
 click==8.1.3
+cycler==0.11.0
+dahuffman==0.4.1
+debugpy==1.6.0
+decorator==5.1.1
+entrypoints==0.4
+executing==0.8.3
+filelock==3.7.1
+fonttools==4.33.3
 gensim==4.2.0
+idna==3.3
+ipykernel==6.13.1
+ipython==8.4.0
+jedi==0.18.1
 joblib==1.1.0
+jupyter-client==7.3.2
+jupyter-core==4.10.0
+kiwisolver==1.4.2
+matplotlib==3.5.2
+matplotlib-inline==0.1.3
+nest-asyncio==1.5.5
 nltk==3.7
 numpy==1.22.4
+packaging==21.3
+parso==0.8.3
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow==9.1.1
+prompt-toolkit==3.0.29
+psutil==5.9.1
+ptyprocess==0.7.0
+pure-eval==0.2.2
+Pygments==2.12.0
+pyparsing==3.0.9
+PySocks==1.7.1
+python-dateutil==2.8.2
+pyzmq==23.1.0
 regex==2022.6.2
+requests==2.27.1
 scikit-learn==1.1.1
 scipy==1.8.1
+six==1.16.0
 sklearn==0.0
 smart-open==6.0.0
+soupsieve==2.3.2.post1
+stack-data==0.2.0
 threadpoolctl==3.1.0
+tornado==6.1
 tqdm==4.64.0
+traitlets==5.2.2.post1
+urllib3==1.26.9
+wcwidth==0.2.5
